welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: not found: value Clor
  fleur(Clor.CYAN)
        ^FlowerPot:13: error: not found: value avnce
  avnce(5)
  ^